golden/error/lex_fstring_double_string_unclosed.test
f"There is no {"closing"} quote there -->

# output:
 --> stdin:1:24
  |
1 | f"There is no {"closing"} quote there -->
  |                         ^~~~~~~~~~~~~~~~~
Error: Unexpected end of input, string literal is not closed.
